[gd_scene load_steps=4 format=3 uid="uid://c5thn6sdix7ts"]

[ext_resource type="Script" path="res://scripts/player.gd" id="1_u4mix"]
[ext_resource type="Texture2D" uid="uid://dcyjpfce2foq6" path="res://assets/player.png" id="2_xoaby"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_c4ont"]
size = Vector2(16, 64)

[node name="player" type="CharacterBody2D"]
script = ExtResource("1_u4mix")

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(3, 3)

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_xoaby")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_c4ont")

[node name="attack_point_top_right" type="Node2D" parent="."]
position = Vector2(8, -32)
rotation = 0.785398

[node name="attack_point_top_left" type="Node2D" parent="."]
position = Vector2(-8, -32)
rotation = -0.785398

[node name="attack_point_top_middle" type="Node2D" parent="."]
position = Vector2(0, -32)

[node name="attack_point_middle_left" type="Node2D" parent="."]
position = Vector2(-8, 0)
rotation = -1.5708

[node name="attack_point_middle_right" type="Node2D" parent="."]
position = Vector2(8, 0)
rotation = 1.5708

[node name="attack_point_bottom_middle" type="Node2D" parent="."]
position = Vector2(0, 32)
rotation = -3.14159

[node name="attack_point_bottom_left" type="Node2D" parent="."]
position = Vector2(-8, 32)
rotation = -2.35619

[node name="attack_point_bottom_right" type="Node2D" parent="."]
position = Vector2(8, 32)
rotation = 2.35619
